# nakama_kun

./: .gitignore  COMMAND_EXECUTION_REPORT.md  EVIDENCE_PIPELINE.md  LICENSE  Progression.md  Project.md  README.md  REPORTING_VALIDATION.md  RETRY_ANALYSIS.md  STRESS_TEST.md  analysis_report_C-Learn.md  deepfake_full_text.txt  pyproject.toml
.nakama_rag/: chroma.sqlite3
.rag/: index_metadata.json
docs/: AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  DATABASE.md  DOCUMENTATION_AUDIT.md  MCP.md  MEMORY.md  OBSERVABILITY.md  PROJECT_ROADMAP.md  RAG.md  README.md  RETRY_SYSTEM.md  SAFETY.md  TASK_CLASSIFICATION.md  TOOLS.md  UI.md  WORKSPACE_AWARENESS.md
tests/: conftest.py  test.md  test_agent_loop.py  test_agents.py  test_ai_integration.py  test_dependency_intelligence.py  test_early_stop.py  test_evidence_store.py  test_experience_planner.py  test_final_response_refactor.py  test_goal_satisfaction.py  test_long_term_memory.py  test_mcp.py  test_mcp_foundation.py  test_mcp_planner.py  test_mcp_production.py  test_mcp_registry.py  test_mcp_unified.py  test_memory.py  test_memory_retrieval.py  test_model_caching.py  test_multi_agent.py  test_orchestration.py  test_parser_unit.py  test_plan_mode.py  test_planning_retrieval.py  test_rag.py  test_reporting_grounding.py  test_required_artifacts.py  test_retrieval.py  test_retrieval_early_termination.py  test_retrieval_final_response.py  test_retrieval_regression_suite.py  test_retrieval_safety.py  test_retrieval_testing_agents.py  test_retry_learning.py  test_retry_memory.py  test_retry_routing.py  test_reviewer_refactor.py  (+15 more)
(+165 files in other folders)
