[project]
name = "nakama-kun"
version = "0.4.0"
description = "An OpenClaw-style AI Agent CLI — your nakama in the terminal. Phase 5: Planning Agent."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "nakama_kun" }]

dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "pyfiglet>=1.0.2",
    "openai>=1.12.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "python-telegram-bot>=21.0",
    "langgraph>=1.2.4",
    "chromadb>=0.4.0",
    "mcp>=0.1.0",
    "fastapi>=0.136.3",
]

[project.scripts]
nakama_kun = "nakama_kun.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nakama_kun"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
